# DPC-Diffusion-Prior-Consistency-for-Robust-NMS-Free-Detection-A-Hybrid-Brownian-Suspicion-Field

./: .gitignore  CHANGELOG.md  README.md  bootstrap.sh  pyproject.toml  requirements.txt
configs/: default.json  production.json  quick.json
docs/: NOTES_LOG.md
dpc/: __init__.py  _version.py  assignment.py  auxiliary_losses.py  calibration.py  checkpoint.py  coco_classes.py  config.py  data.py  data_cache.py  denoiser.py  diffusion.py  ema.py  field.py  losses.py  manifest.py  metrics.py  nms.py  pooling.py  seeding.py  synthetic_patch.py  wrapper.py  yolo26_native.py
dpcctl/: __init__.py  __main__.py  cli.py  config.py  dashboard.py  events.py  orchestrator.py  paths.py
dpcctl/phases/: __init__.py  _base.py  aggregate.py  diagnose.py  eval_negative_control.py  eval_p3.py  prep.py  train_p1.py  train_p2.py
tests/: conftest.py  test_assignment.py  test_auxiliary_losses.py  test_bootstrap.py  test_calibration.py  test_checkpoint.py  test_data.py  test_denoiser.py  test_diffusion.py  test_metrics.py  test_nms.py  test_phase3_metrics.py  test_seeding.py  test_synthetic_patch.py
tools/: build_caches.py  compare_phases.py  compare_raw_residuals.py  diagnose_raw_residual.py  diagnose_residuals.py  diagnose_untrained.py  evaluate_phase3.py  fit_color_distribution.py  render_panels.py  sanity_check_data_phase1.py  sanity_check_data_phase2.py  sanity_check_eval.py  sanity_check_loss_phase1.py  sanity_check_loss_phase2.py  smoke_test_phase1.py  smoke_test_phase2.py  smoke_test_phase3.py  sweep_alpha.py  train_phase1.py  train_phase2.py
